--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -52,7 +52,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: configure
-    if: ${{ needs.configure.outputs.matrix != '[]' }}
+    if: ${{ fromJson(needs.configure.outputs.matrix).length != 0 }}
     permissions:
       contents: write
     strategy:
