--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -107,6 +107,7 @@ jobs:
   combine:
     runs-on: ubuntu-latest
     needs: build
+    if: always()
    
     steps:
     - uses: actions/checkout@v4
