--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -128,6 +128,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: combine
+    if: always()
     permissions:
       pages: write
       id-token: write
