--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,7 +3,7 @@ name: JavaScript in Browser Homeworks
 on:
   push:
     branches: [ "main" ]  
-    paths: [ "pages.json" ]
+    paths: [ "pages.json", "./github/workflows/*" ]
 
 env:
   HOME_URL: 'https://danbzay.github.io/js-browser/'
