--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,7 +35,7 @@ jobs:
         bash > publish/index.html;
         cat publish/index.html;
 
-    - name: Push results to publish
+    - name: Push index.html to publish folder
       continue-on-error: true
       run: |
         git config --global user.name 'danbzay'
@@ -54,7 +54,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: configure
-    if: ${{ fromJson(needs.configure.outputs.matrix).length != 0 }}
+    # if: ${{ fromJson(needs.configure.outputs.matrix).length != 0 }}
     permissions:
       contents: write
     strategy:
@@ -76,6 +76,7 @@ jobs:
       working-directory: ${{ matrix.page.path }}        
       run: |
         #chmod +x "${{ matrix.page.script }}"
+        echo "l=${{ fromJson(needs.configure.outputs.matrix).length }}"
         echo "${{ matrix.page.script }}" | bash
 
     - name: Push results to publish folder
