--- a/5-forms/package.json
+++ b/5-forms/package.json
@@ -27,6 +27,7 @@
     "jest-environment-jsdom": "^30.2.0",
     "jest-transform-css": "^6.0.3",
     "mini-css-extract-plugin": "^2.9.4",
+    "moment": "^2.30.1",
     "puppeteer": "^24.29.1",
     "style-loader": "^3.3.3",
     "val-loader": "^6.0.0",
