--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,7 +54,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: configure
-    # if: ${{ fromJson(needs.configure.outputs.matrix).length != 0 }}
+    if: ${{ fromJson(needs.configure.outputs.matrix) != '[]' }}
     permissions:
       contents: write
     strategy:
