--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -55,6 +55,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: configure
     if: ${{ fromJson(needs.configure.outputs.matrix) != '[]' }}
+    steps:
+    - run: echo 'avoid error message if empty matrix'
 
   build:
     runs-on: ubuntu-latest
