--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,11 +54,11 @@ jobs:
   exist:
     runs-on: ubuntu-latest
     needs: configure
-    if: ${{ fromJson(needs.configure.outputs.matrix) != '[]' }}
+    if: ${{ needs.configure.outputs.matrix != '[]' }}
     steps:
     - run: |
         echo 'avoid error message if empty matrix';
-        echo 'matrix: ${{ fromJson(needs.configure.outputs.matrix) }}';
+        echo 'matrix: ${{ needs.configure.outputs.matrix }}';
 
   build:
     runs-on: ubuntu-latest
