--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,7 +54,7 @@ jobs:
   exist:
     runs-on: ubuntu-latest
     needs: configure
-    if: ${{ needs.configure.outputs.matrix != '[]' }}
+    if: ${{ needs.configure.outputs.matrix != [] }}
     steps:
     - run: |
         echo 'avoid error message if empty matrix';
