--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -51,19 +51,19 @@ jobs:
           git push
         fi
   
-  exist:
-    runs-on: ubuntu-latest
-    needs: configure
-    if: ${{ toJson(needs.configure.outputs.matrix) != '[]  ' }}
-    steps:
-    - run: |
-        echo 'avoid error message if empty matrix';
-        echo 'matrix: ${{ fromJson(needs.configure.outputs.matrix) }}';
-        echo 'matrix: ${{ toJson(needs.configure.outputs.matrix) }}';
+#  exist:
+#    runs-on: ubuntu-latest
+#    needs: configure
+#    if: ${{ toJson(needs.configure.outputs.matrix) != '[]  ' }}
+#    steps:
+#    - run: |
+#        echo 'avoid error message if empty matrix';
+#        echo 'matrix: ${{ fromJson(needs.configure.outputs.matrix) }}';
+#        echo 'matrix: ${{ toJson(needs.configure.outputs.matrix) }}';
 
   build:
     runs-on: ubuntu-latest
-    needs: exist
+    needs: configure
     # if: ${{ fromJson(needs.configure.outputs.matrix) != '[]' }}
     permissions:
       contents: write
